--- a/src/messenger-app/angular.json
+++ b/src/messenger-app/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/app/"
           },
           "configurations": {
             "production": {
@@ -61,7 +62,8 @@
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
                 }
-              ]
+              ],
+              "baseHref": "/app/"
             }
           }
         },
