--- a/src/messenger-app/package.json
+++ b/src/messenger-app/package.json
@@ -27,8 +27,10 @@
     "@angular-devkit/build-angular": "~0.1102.7",
     "@angular/cli": "~11.2.7",
     "@angular/compiler-cli": "~11.2.8",
+    "@types/big.js": "^6.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.10",
+    "big.js": "^5.2.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
